# edge-runner

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bytetrack_stable.yaml  json.gbnf  proximity_config.yaml  roi_exclusion.yaml  zones.yaml  zones_vlm.yaml
scripts/: download_qwen3_vl.sh  install_services.sh  offline.sh  online.sh  start.sh  start_test.sh
services/: edge-runner.service  llama-server.service
src/: alert_manager.py  bbox_smoother.py  box_predictor.py  cv_loop.py  ground_plane.py  loop_reset.py  machina_schema.py  main.py  motion_gate.py  proximity_detector.py  roi_filter.py  runtime_mode.py  server.py  state.py  state_machine.py  ttc.py  vlm_client.py  vlm_worker.py  zone_calibrator.py  zone_config_manager.py  zone_manager.py
tests/: __init__.py  test_camera.py  test_event_store.py  test_vlm.py  test_zone_manager.py
tools/: __init__.py  calibrate_floor.py  camera_check.py  demo.py  fix_yolo_world.py  safety_audit_report.py  stability_test.py
